fix overflow in brush editor

--- a/static/index.css
+++ b/static/index.css
@@ -16,6 +16,8 @@ main {
     &>.fullscreen {
         width: 100%;
         height: 100%;
+        max-width: 100%;
+        max-height: 100%;
         position: absolute;
         left: 0;
         top: 0;
@@ -39,21 +41,27 @@ main {
 
         &>.right {
             grid-column: right / right;
-            height: fit-content;
+            height: 100%;
+            min-height: 0;
+            max-height: 100%;
 
-            display: flex;
-            flex-direction: row;
-            justify-content: stretch;
-
-            &>rkgk-resize-handle {
-                flex-shrink: 0;
-                height: auto;
-            }
-
-            &>rkgk-brush-editor {
+            &>.right-content {
                 max-height: 100%;
-                overflow: auto;
-                flex-grow: 1;
+
+                display: flex;
+                flex-direction: row;
+                justify-content: stretch;
+                
+                &>rkgk-resize-handle {
+                    flex-shrink: 0;
+                    height: auto;
+                }
+
+                &>rkgk-brush-editor {
+                    height: auto;
+                    overflow: auto;
+                    flex-grow: 1;
+                }
             }
         }
     }
